--- a/vignettes/IFBrier.Rmd
+++ b/vignettes/IFBrier.Rmd
@@ -74,22 +74,53 @@ The last term that is subtracted is the Brier score. Then using that
 $$
  f_i(t,x) = \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} \delta_{X_i}(x)}{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ \delta_{X_i}(x)dP(s,0 | x)}{G(s|X_i)^2S(s|X_i)^2}
 $$
-we see that by splitting the double integral into two parts that and that $\int f(x) \delta_{X_i}(x) dx = f(X_i)$
-\begin{align*}
-\int 1_{\{t \leqslant \tau\}}(1-2 R(\tau \mid x)) f_i(t-,x) \frac{dP(t,1,x)}{G(t-|x)} &= (1-2 R(\tau \mid X_i)) \int 1_{\{t \leqslant \tau\}}\tilde{f}_i(t-) \frac{dP(t,1|X_i)}{G(t-|X_i)}
-\end{align*}
-where $\tilde{f}_i(t) =\frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ dP(s,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2}$. Rewriting $\tilde{f}_i(t)$ a bit, we get 
+we see that (plugging in $f(t,x)$ instead of $f(t-,x)$!)
 $$
-\tilde{f}_i(t) =\frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} +\int_0^{\tilde{T}_i \wedge t} \frac{ S(s|X_i) G(ds | X_i)}{G(s|X_i)^2S(s|X_i)^2} = \frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} +\int_0^{\tilde{T}_i \wedge t} \frac{ 1}{G(s|X_i)S(s|X_i)}  \frac{G(ds | X_i)}{G(s|X_i)}
+\begin{aligned}
+\int_X \int_0^\tau(1-2R(\tau|x))f_i(t-,x) \frac{P(dt,1,x)}{G(t-|x)} &= \int_X \int_0^\tau(1-2R(\tau|x))\left[\frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} \delta_{X_i}(x)}{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ \delta_{X_i}(x)P(ds,0 | x)}{G(s|X_i)^2S(s|X_i)^2}\right] \frac{P(dt,1,x)}{G(t-|x)} \\
+&= \int_0^\tau(1-2R(\tau|X_i))\left[\frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} -\int_0^{\tilde{T}_i \wedge t} \frac{ P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2}\right] \frac{P(dt,1 | X_i)}{G(t-|X_i)} \\
+&= (i) - (ii)
+\end{aligned}
 $$
-As for the estimation, we have
-\begin{align*}
-IC_{\Brier}(\tilde{T}_i,\Delta_i,X_i;\tau) 
-&=   1_{\{\tilde{T}_i \leqslant \tau, \Delta_i=1\}}(1-2 R(\tau \mid X_i)) \frac{1}{\hat{G}(\tilde{T}_i- | X_i)}  \\
-&+  \int 1_{\{t \leqslant \tau\}}(1-2 R(\tau \mid x)) \hat{f}_i(t-,x) \frac{d\emp(t,1,x)}{\hat{G}(t-|x)} + R\left(\tau | X_i \right)^2 \\
-&- \int R\left(\tau | x\right)^2 d\emp(x)
-- \int 1_{\{t \leqslant \tau\}}(1-2 R(\tau \mid x)) \frac{d\emp(t,1,x)}{\hat{G}(t-|x)}
-\end{align*}
-Then using that 
+where 
+$$
+\begin{aligned}
+(i) &=\int_0^\tau(1-2R(\tau|X_i))\frac{\mathbbm{1}_{\{\tilde{T_i} \leq t, \Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} \frac{P(dt,1 | X_i)}{G(t-|X_i)} \\
+&= (1-2R(\tau|X_i))\frac{\mathbbm{1}_{\{\tilde{T}_i \leq \tau,\Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} \int_{\tilde{T}_i}^\tau \frac{P(dt,1 | X_i)}{G(t-|X_i)} \\
+&= (1-2R(\tau|X_i))\frac{\mathbbm{1}_{\{\tilde{T}_i \leq \tau,\Delta_i = 0\}} }{G(\tilde{T_i}|X_i)S(\tilde{T_i}|X_i)} (F_1(\tau|X_i)-F_1(\tilde{T}_i|X_i))
+\end{aligned}
+$$
+
+Similarly, we have
+$$
+\begin{aligned}
+(ii) &=(1-2R(\tau|X_i))\int_0^\tau\int_0^{\tilde{T}_i \wedge t} \frac{ P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2} \frac{P(dt,1 | X_i)}{G(t-|X_i)} \\
+\end{aligned}
+$$
+If $\tilde{T}_i > \tau$, then this can be written as 
+$$
+\begin{aligned}
+(ii) &=(1-2R(\tau|X_i))\int_0^\tau\int_s^{\tau} \frac{ P(dt,1 | X_i)}{G(t-|X_i)} \frac{P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2} \\
+&= (1-2R(\tau|X_i))\int_0^\tau(F_1(\tau|X_i)-F_1(s|X_i)) \frac{P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2} 
+\end{aligned}
+$$
+On the other hand, if $\tilde{T}_i \leq \tau$, then
+$$
+\begin{aligned}
+(ii) &=(1-2R(\tau|X_i))\int_0^{\tilde{T}_i}\int_s^{\tau} \frac{ P(dt,1 | X_i)}{G(t-|X_i)} \frac{P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2}  \\
+&= (1-2R(\tau|X_i))\int_0^{\tilde{T}_i}(F_1(\tau|X_i)-F_1(s|X_i)) \frac{P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2} 
+\end{aligned}
+$$
+Thus 
+$$
+\begin{aligned}
+(ii) 
+&= (1-2R(\tau|X_i))\int_0^{\tilde{T}_i \wedge \tau}(F_1(\tau|X_i)-F_1(s|X_i)) \frac{P(ds,0 | X_i)}{G(s|X_i)^2S(s|X_i)^2} 
+\end{aligned}
+$$
+Hence, 
+$$
+(i)-(ii) = (1-2R(\tau |X_i))\left(\frac{I(\tilde{T}_i \leq \tau, \Delta_i = 0)}{G(\tilde{T}_i|X_i)S(\tilde{T}_i|X_i)}(F_1(\tau|X_i)-F_1(\tilde{T}_i|X_i))-\int_0^{\tilde{T}_i \wedge \tau} \frac{(F_1(\tau|X_i)-F_1(s|X_i))}{G(s|X_i)^2S(s|X_i)^2}P(ds,0|X_i)\right)
+$$
 
 
